compiler/testData/diagnostics/tests/generics/tpAsReified/InProperty.kt
val <<!REIFIED_TYPE_PARAMETER_NO_INLINE!>reified<!> T> T.v: T
    get() = throw UnsupportedOperationException()
